linuxmuster-linbo (2.3.15-0) babo62; urgency=low

  * update-linbofs.sh: avoided multiple invokation of sophomorix-passwd.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 21 Nov 2016 15:32:36 +0100

linuxmuster-linbo (2.3.14-0) babo62; urgency=low

  * kernel updated to 4.8.10:
    - added surface 3 support for 64bit kernel.
    - removed experimental sata drivers.
    - removed btrfs driver.
  * cloop 4.8 update, fetched from http://debian-knoppix.alioth.debian.org/packages/linux-source-4.7.3/ and modified for kernel 4.8.10 (see https://lists.debian.org/debian-knoppix/2016/10/msg00001.html).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 21 Nov 2016 15:32:36 +0100

linuxmuster-linbo (2.3.13-0) babo62; urgency=low

  * control file improvements.
  * linbo_cmd, update_win(): removed automated installation of linuxmuster
    start tasks on windows systems (closes #648).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 18 Nov 2016 14:38:34 +0100

linuxmuster-linbo (2.3.12-2) babo62; urgency=low

  * linuxmuster-linbo7:
    - removed atftpd configuration setup.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 11 Nov 2016 11:08:12 +0100

linuxmuster-linbo (2.3.12-1) babo62; urgency=low

  * linuxmuster-linbo7:
    - changed depends to linuxmuster-base7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 09 Nov 2016 18:23:17 +0100

linuxmuster-linbo (2.3.12-0) babo62; urgency=low

  * fixed patch_registry script filename.
  * further more package consolidation, moving postinst stuff to linuxmuster-linbo-common.
  * fallback to file sync in case of ntfsclone's cluster referenced twice error.
  * excluded partition table from mbr backup and restore of windows systems (another attempt to fix #637).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Oct 2016 11:37:05 +0200

linuxmuster-linbo (2.3.11-0) babo62; urgency=low

  * splitted package in linuxmuster-linbo, which contains the scripts,